THRIFT-3497 Build fails with "invalid use of incomplete type" Client: C++ Patch: Simon South

- Monitor.cpp: Include thrift-config.h for definition of
  HAVE_SYS_TIME_H
- Monitor.h: Explicitly include sys/time.h on platforms that require
  this

This closes #753