lib/cpp/src/thrift/concurrency/Monitor.cpp
@@ -17,6 +17,8 @@
  * under the License.
  */
 
+#include <thrift/thrift-config.h>
+
 #include <thrift/concurrency/Monitor.h>
 #include <thrift/concurrency/Exception.h>
 #include <thrift/concurrency/Util.h>
